# ydbms

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md
columnar/: CMakeLists.txt  ycolumnar.cpp  ytable_col.cpp
config/: ydbmscfg.h.in
include/: ycmd.h  yerrorlog.h  ytable.h  ytranlog.h  ytransaction.h
include/columnar/: ycolumnar.h  ytable_col.h
memory/: CMakeLists.txt  ymemory.cpp  ymemory.h
scripts/: win7env.cmd
source/: YCmd.cpp  YCmd.h  YErrorLog.cpp  YMain.cpp  YQueue.h  YRedoLog.cpp  YRedoLog.h  YSession.cpp  YTable.cpp  YTableOnDisk.cpp  YTableOnDisk.h  YTranLog.cpp  YTranLog.h  ycmd.cpp  yerrorlog.cpp  yerrorlog.h  ymain.cpp  yqueue.cpp  yredolog.cpp  ysession.cpp  ysession.h  ytable.cpp  ytable.h  ytableondisk.cpp  ytranlog.cpp  ytransaction.cpp  ytransaction.h
